# llm_couting

./: main.py  pyproject.toml
scripts/: eval_decoding.py  mlp_circuit.py  phase1_repr.py  phase2_counter.py  phase3_convert.py  phase5_decode.py  phase_length_sweep.py  plot_sweep.py  probing_snippets.py  run_count_regime.py  run_generalize.py  run_mix36.py  run_parity.py  run_parity_L.py  run_parity_circuit.py  run_parity_heads.py  run_parity_pathway.py  sweep_L.py  sweep_digit6.py  train_count50.py  train_model.py
src/llm_counting/model/: model.py
src/llm_counting/train/: trainer.py
src/llm_counting/utils/: utils.py
