[project]
name = "llm-counting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "tqdm>=4.68.3",
]

# Pin torch to the CUDA 12.9 build (matches this node's driver: CUDA 12.9).
# The default PyPI torch ships +cu130, which needs a newer driver.
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
